word wrap fix

--- a/style.scss
+++ b/style.scss
@@ -25,6 +25,8 @@ body {
   left: 0;
   right: 0;
   bottom: 0;
+  min-width: 320px;
+  min-height: 367px;
   text-align: center;
 
   .floating {
@@ -32,8 +34,8 @@ body {
     top: 50%;
     left: 50%;
     margin-top: (-367px / 2);
-    margin-left: (-300px / 2);
-    width: 300px;
+    margin-left: (-320px / 2);
+    width: 320px;
     height: 367px;
   }
 
@@ -44,7 +46,7 @@ body {
   }
 
   hr {
-    width: 300px;
+    width: 320px;
     height: 1px;
     border: 0;
     border-top: 1px solid darken($background-color, 10%);    
